--- a/Proiect2/app/build.gradle
+++ b/Proiect2/app/build.gradle
@@ -78,4 +78,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+//    implementation 'com.squareup.picasso:picasso:2.8'
+
+//    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
