--- a/Proiect2/app/build.gradle
+++ b/Proiect2/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    implementation 'com.jjoe64:graphview:4.2.2'
+
 //    implementation 'com.squareup.picasso:picasso:2.8'
 
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
